src/less/in-depth.less
//
// KCStar Project Theme
//

@space: 40px;
@width: 720px;

@import (less) "../css/flex-layout.css";
@import (less) "../css/typography.css";

// Mixins
.align() {
  box-sizing: border-box;
  max-width: @width;
  margin: @space/2 auto;

  &.fill, &[class^="ng_mm_link"] {
    max-width: 100%;
  }

  &[hidden] {
    display: none;
  }

  @media (max-width: 769px) {
    &:not(.fill) {
      padding-left: @space/2;
      padding-right: @space/2;
    }
  }
}

.aside() {
  max-width: 100%;
  
  > * {
    margin: 0;
  }

  @media (min-width: 1200px) {
    float: left;
    max-width: 400px;
    margin: @space @space @space 15%;

    &.right {
      float: right;
      margin: @space 15% @space @space;
    }
  }
}

.caption() {
  margin: 5px 0;
  font-size: 14px;
  line-height: 18px;
  max-width: 900px;
  font-family: 'McClatchy Sans',Arial,'Helvetica Neue',Helvetica,sans-serif !important;
}


// Standard elements
aside {
  .aside;
}

figure {
  line-height: 0;

  img {
    display: block;
    max-width: 100%;
  }

  figcaption {
    .caption;
  }

  &.fill figcaption {
    padding: 0 @space/2;
  }
}

blockquote {
  padding: 0;
  border: none;
  font-size: 1.6em;
  font-weight: normal;
  font-family: "McClatchy Slab", Georgia, serif;
  line-height: 1.15em;
  color: #999;

  q {
    display: block;
  }

  small {
    display: block;
    text-align: right;
    font-size: 15px;
    margin: 1rem 1rem 0 0;

    &::before {
      content: '\2014 \00A0';
    }
  }
}

q {
  font-weight: normal;
  font-family: "McClatchy Slab", Georgia, serif;
  line-height: 1.25em;
  color: #999;

  &::before {
    font-size: 2.5em;
    position: relative;
    top: 0.3em;
  }
}

hr {
  display: block;
  margin: @space auto;
  max-width: 320px;
  border-color: #212121;
  border-style: solid;
  clear: both;
}

// Content body overhaul
[id*="content-body-"] {
  font-size: 20px;

  > * {
    .align;
  }

  p {
    font-size: 1em;
  }

  > aside {
    .aside;
  }

  address {
    font-size: 15px;
    font-family: "McClatchy Slab", Georgia, serif;
    text-transform: uppercase;

    a {
      display: block;
      font-style: italic;
      text-transform: lowercase;
    }
  }

  .fill:first-child, [class^="ng_mm_link"]:first-child {
    margin-top: 0 !important;
  }

  blockquote {
    max-width: 550px;
    margin: 0 auto;
  }
}

// Embed overhaul
[class^="ng_mm_link"] {
  padding-left: 0 !important;
  padding-right: 0 !important;

  > div {
    > * {
      .align;
    }

    > aside {
      .aside;
    }
  }
}

// Embedded videos
.embed-video {
  margin-bottom: 0;

  .summary {
    .caption
  }

  .title {
    display: none;
  }
}

// Bootstrap overload
#masthead-container {
  margin-bottom: 0 !important;
}

#leaderboard-ad {
  margin: 0;
  padding: 0;
}

.container[role=main] {
  width: 100% !important;
  padding: 0 !important;
  max-width: 1600px;
  margin: 0 auto;

  .row {
    margin: 0;
  }

  [class*="col-"] {
    padding: 0 !important;
  }
}

